PB-13899 Add system dates, fix documentation, fix tests (#81)
